Creación del script de importación

--- a/src/otros/importador-estaciones-carga/importer.ipynb
+++ b/src/otros/importador-estaciones-carga/importer.ipynb
@@ -34,38 +34,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>54650</th>\n",
-       "      <td>SUMMIT TOYOTA STATION 1</td>\n",
-       "      <td>41.063476</td>\n",
-       "      <td>-81.577133</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23511</th>\n",
-       "      <td>Two Wisconsin Circle - Tesla Destination</td>\n",
-       "      <td>38.961970</td>\n",
-       "      <td>-77.085332</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41484</th>\n",
-       "      <td>Middle Georgia State University - Cochran</td>\n",
-       "      <td>32.380615</td>\n",
-       "      <td>-83.346060</td>\n",
+       "      <th>25094</th>\n",
+       "      <td>DELTA AIR LINES TOC EV CHARGER1</td>\n",
+       "      <td>33.641652</td>\n",
+       "      <td>-84.415299</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49427</th>\n",
-       "      <td>DeForest Athletic Complex</td>\n",
-       "      <td>43.221461</td>\n",
-       "      <td>-89.362470</td>\n",
+       "      <th>59545</th>\n",
+       "      <td>275 west Hunt Club Rd - 2</td>\n",
+       "      <td>45.340513</td>\n",
+       "      <td>-75.709017</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3059</th>\n",
-       "      <td>STOWE ELECTRIC REC PATH</td>\n",
-       "      <td>44.466002</td>\n",
-       "      <td>-72.684932</td>\n",
+       "      <th>2009</th>\n",
+       "      <td>City of Pasadena - Marengo Garage</td>\n",
+       "      <td>34.144703</td>\n",
+       "      <td>-118.146957</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26497</th>\n",
+       "      <td>BURNS MGT THE SPRINGS #3</td>\n",
+       "      <td>43.093051</td>\n",
+       "      <td>-73.743350</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37448</th>\n",
+       "      <td>Guarenteed Rate Field Lot D</td>\n",
+       "      <td>41.830674</td>\n",
+       "      <td>-87.636027</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -76,38 +76,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31926</th>\n",
-       "      <td>CDC PD06</td>\n",
-       "      <td>33.797096</td>\n",
-       "      <td>-84.326394</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27230</th>\n",
-       "      <td>DDC DDC WEST PARK 2</td>\n",
-       "      <td>33.548843</td>\n",
-       "      <td>-112.262817</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32359</th>\n",
-       "      <td>KOHL'S - CHPT 1300 ROMEOVIL 2</td>\n",
-       "      <td>41.615545</td>\n",
-       "      <td>-88.121088</td>\n",
+       "      <th>47470</th>\n",
+       "      <td>Hotel Monaco Seattle</td>\n",
+       "      <td>47.607141</td>\n",
+       "      <td>-122.333917</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22733</th>\n",
-       "      <td>SUMMIT COUNTY CC SOUTH</td>\n",
-       "      <td>39.570980</td>\n",
-       "      <td>-106.080920</td>\n",
+       "      <th>49136</th>\n",
+       "      <td>Terrace Place Garage</td>\n",
+       "      <td>36.150209</td>\n",
+       "      <td>-86.799708</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46329</th>\n",
-       "      <td>Royal Palms Luxury Rentals</td>\n",
-       "      <td>25.777255</td>\n",
-       "      <td>-80.322474</td>\n",
+       "      <th>60217</th>\n",
+       "      <td>Karl of Marshalltown</td>\n",
+       "      <td>42.062840</td>\n",
+       "      <td>-92.908886</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16128</th>\n",
+       "      <td>Kohl's at Rolling Hills Plaza</td>\n",
+       "      <td>33.793911</td>\n",
+       "      <td>-118.331992</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35078</th>\n",
+       "      <td>MITIMCO P2-8 W</td>\n",
+       "      <td>42.361203</td>\n",
+       "      <td>-71.085586</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -116,31 +116,31 @@
        "</div>"
       ],
       "text/plain": [
-       "                                    Station Name   Latitude   Longitude  \\\n",
-       "54650                    SUMMIT TOYOTA STATION 1  41.063476  -81.577133   \n",
-       "23511   Two Wisconsin Circle - Tesla Destination  38.961970  -77.085332   \n",
-       "41484  Middle Georgia State University - Cochran  32.380615  -83.346060   \n",
-       "49427                  DeForest Athletic Complex  43.221461  -89.362470   \n",
-       "3059                     STOWE ELECTRIC REC PATH  44.466002  -72.684932   \n",
-       "...                                          ...        ...         ...   \n",
-       "31926                                   CDC PD06  33.797096  -84.326394   \n",
-       "27230                        DDC DDC WEST PARK 2  33.548843 -112.262817   \n",
-       "32359              KOHL'S - CHPT 1300 ROMEOVIL 2  41.615545  -88.121088   \n",
-       "22733                     SUMMIT COUNTY CC SOUTH  39.570980 -106.080920   \n",
-       "46329                 Royal Palms Luxury Rentals  25.777255  -80.322474   \n",
+       "                            Station Name   Latitude   Longitude  \\\n",
+       "25094    DELTA AIR LINES TOC EV CHARGER1  33.641652  -84.415299   \n",
+       "59545          275 west Hunt Club Rd - 2  45.340513  -75.709017   \n",
+       "2009   City of Pasadena - Marengo Garage  34.144703 -118.146957   \n",
+       "26497           BURNS MGT THE SPRINGS #3  43.093051  -73.743350   \n",
+       "37448        Guarenteed Rate Field Lot D  41.830674  -87.636027   \n",
+       "...                                  ...        ...         ...   \n",
+       "47470               Hotel Monaco Seattle  47.607141 -122.333917   \n",
+       "49136               Terrace Place Garage  36.150209  -86.799708   \n",
+       "60217               Karl of Marshalltown  42.062840  -92.908886   \n",
+       "16128      Kohl's at Rolling Hills Plaza  33.793911 -118.331992   \n",
+       "35078                     MITIMCO P2-8 W  42.361203  -71.085586   \n",
        "\n",
        "       EV Level2 EVSE Num  \n",
-       "54650                 1.0  \n",
-       "23511                 1.0  \n",
-       "41484                 2.0  \n",
-       "49427                 4.0  \n",
-       "3059                  2.0  \n",
+       "25094                 2.0  \n",
+       "59545                 4.0  \n",
+       "2009                  5.0  \n",
+       "26497                 2.0  \n",
+       "37448                 2.0  \n",
        "...                   ...  \n",
-       "31926                 2.0  \n",
-       "27230                 2.0  \n",
-       "32359                 1.0  \n",
-       "22733                 2.0  \n",
-       "46329                 2.0  \n",
+       "47470                 1.0  \n",
+       "49136                 2.0  \n",
+       "60217                 1.0  \n",
+       "16128                 2.0  \n",
+       "35078                 2.0  \n",
        "\n",
        "[54265 rows x 4 columns]"
       ]
@@ -161,8 +161,8 @@
     "df2 = df[[ \"Station Name\", \"Latitude\", \"Longitude\", \"EV Level2 EVSE Num\"]]\n",
     "#Eliminamos los NULL\n",
     "df2 = df2[df[\"EV Level2 EVSE Num\"] > 0]\n",
-    "df2.to_csv('eeuu_fuel_stations_processed.csv', index=False)\n",
     "df2[\"Station Name\"].astype(str)\n",
+    "df2.to_csv('eeuu_fuel_stations_processed.csv', index=False)\n",
     "df2\n"
    ]
   },
@@ -272,28 +272,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "54650    None\n",
-       "23511    None\n",
-       "41484    None\n",
-       "49427    None\n",
-       "3059     None\n",
-       "52487    None\n",
-       "19009    None\n",
-       "20035    None\n",
-       "2055     None\n",
-       "11804    None\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ClientError",
+     "evalue": "An error occurred (ExpiredTokenException) when calling the Scan operation: The security token included in the request is expired",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mClientError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m electrolineras_tabla \u001b[39m=\u001b[39m dynamodb\u001b[39m.\u001b[39mTable(\u001b[39m'\u001b[39m\u001b[39mElectrolinera\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     11\u001b[0m \u001b[39m#Eliminamos las entradas anteriores\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m response \u001b[39m=\u001b[39m electrolineras_tabla\u001b[39m.\u001b[39;49mscan()\n\u001b[1;32m     13\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m response[\u001b[39m'\u001b[39m\u001b[39mItems\u001b[39m\u001b[39m'\u001b[39m]:\n\u001b[1;32m     14\u001b[0m     electrolineras_tabla\u001b[39m.\u001b[39mdelete_item(\n\u001b[1;32m     15\u001b[0m         Key\u001b[39m=\u001b[39m{\n\u001b[1;32m     16\u001b[0m             \u001b[39m'\u001b[39m\u001b[39mID_Electrolinera\u001b[39m\u001b[39m'\u001b[39m: i[\u001b[39m'\u001b[39m\u001b[39mID_Electrolinera\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m     17\u001b[0m         }\n\u001b[1;32m     18\u001b[0m     )\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/boto3/resources/factory.py:580\u001b[0m, in \u001b[0;36mResourceFactory._create_action.<locals>.do_action\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    579\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdo_action\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m--> 580\u001b[0m     response \u001b[39m=\u001b[39m action(\u001b[39mself\u001b[39;49m, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    582\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mload\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m    583\u001b[0m         \u001b[39m# Clear cached data. It will be reloaded the next\u001b[39;00m\n\u001b[1;32m    584\u001b[0m         \u001b[39m# time that an attribute is accessed.\u001b[39;00m\n\u001b[1;32m    585\u001b[0m         \u001b[39m# TODO: Make this configurable in the future?\u001b[39;00m\n\u001b[1;32m    586\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmeta\u001b[39m.\u001b[39mdata \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/boto3/resources/action.py:88\u001b[0m, in \u001b[0;36mServiceAction.__call__\u001b[0;34m(self, parent, *args, **kwargs)\u001b[0m\n\u001b[1;32m     79\u001b[0m params\u001b[39m.\u001b[39mupdate(kwargs)\n\u001b[1;32m     81\u001b[0m logger\u001b[39m.\u001b[39mdebug(\n\u001b[1;32m     82\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mCalling \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m with \u001b[39m\u001b[39m%r\u001b[39;00m\u001b[39m'\u001b[39m,\n\u001b[1;32m     83\u001b[0m     parent\u001b[39m.\u001b[39mmeta\u001b[39m.\u001b[39mservice_name,\n\u001b[1;32m     84\u001b[0m     operation_name,\n\u001b[1;32m     85\u001b[0m     params,\n\u001b[1;32m     86\u001b[0m )\n\u001b[0;32m---> 88\u001b[0m response \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39;49m(parent\u001b[39m.\u001b[39;49mmeta\u001b[39m.\u001b[39;49mclient, operation_name)(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mparams)\n\u001b[1;32m     90\u001b[0m logger\u001b[39m.\u001b[39mdebug(\u001b[39m'\u001b[39m\u001b[39mResponse: \u001b[39m\u001b[39m%r\u001b[39;00m\u001b[39m'\u001b[39m, response)\n\u001b[1;32m     92\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_response_handler(parent, params, response)\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/botocore/client.py:530\u001b[0m, in \u001b[0;36mClientCreator._create_api_method.<locals>._api_call\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    526\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\n\u001b[1;32m    527\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mpy_operation_name\u001b[39m}\u001b[39;00m\u001b[39m() only accepts keyword arguments.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    528\u001b[0m     )\n\u001b[1;32m    529\u001b[0m \u001b[39m# The \"self\" in this scope is referring to the BaseClient.\u001b[39;00m\n\u001b[0;32m--> 530\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_make_api_call(operation_name, kwargs)\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/botocore/client.py:960\u001b[0m, in \u001b[0;36mBaseClient._make_api_call\u001b[0;34m(self, operation_name, api_params)\u001b[0m\n\u001b[1;32m    958\u001b[0m     error_code \u001b[39m=\u001b[39m parsed_response\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mError\u001b[39m\u001b[39m\"\u001b[39m, {})\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mCode\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    959\u001b[0m     error_class \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexceptions\u001b[39m.\u001b[39mfrom_code(error_code)\n\u001b[0;32m--> 960\u001b[0m     \u001b[39mraise\u001b[39;00m error_class(parsed_response, operation_name)\n\u001b[1;32m    961\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    962\u001b[0m     \u001b[39mreturn\u001b[39;00m parsed_response\n",
+      "\u001b[0;31mClientError\u001b[0m: An error occurred (ExpiredTokenException) when calling the Scan operation: The security token included in the request is expired"
+     ]
     }
    ],
    "source": [
@@ -317,7 +312,6 @@
     "    )\n",
     "\n",
     "def import_electrolinera(row):\n",
-    "\n",
     "    item = {\n",
     "            'ID_Electrolinera': row[\"index\"],\n",
     "            'nombre': row['Station Name'],\n",
@@ -332,8 +326,8 @@
     "        Item = json.loads(json.dumps(item), parse_float=Decimal)\n",
     "    )\n",
     "\n",
-    "\n",
-    "df_mini = df2.head(10)\n",
+    "df = pd.read_csv('eeuu_fuel_stations_processed.csv', low_memory=False)\n",
+    "df_mini = df.head(10)\n",
     "df_mini.apply(import_electrolinera, axis=1)"
    ]
   },
